--- a/templates/login_register_base.html
+++ b/templates/login_register_base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask-MongoDB Example App</title>
+    <title>Treasure Trove</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
@@ -14,18 +14,14 @@
   <body>
     <div>
       <header>
-        <h1>Flask-Pymongo Example App</h1>
-        <nav>
-          <a href="{{ url_for('show_home')}}">Home</a>
-          <a href="{{ url_for('logout')}}">Log out</a>
-        </nav>
+        <h1>Welcome to Treasure Trove</h1>
       </header>
       <main>{% block container %} {% endblock %}</main>
       <footer>
         <p>
-          &copy; 2022. Shared under the GPL3 license. Source code available at
+          &copy; 2024. Source code available at
           <a
-            href="https://github.com/nyu-software-engineering/flask-pymongo-web-app-example"
+            href="https://github.com/software-students-spring2024/2-web-app-exercise-fizzbuzz"
             >available on Github</a
           >.
         </p>
