--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,7 @@
                     <div class="input">
                         <input class="input_field" type="text" name="email" placeholder="Email..." required>
                         <label class="input_label" for="email">Email</label>
+                        <label class="input_label" class="error" for="email">{{error_message}}</label>
                     </div>
                     <div class="input">
                         <input class="input_field" type="password" name="password" placeholder="Password..." required>
