--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
         <h1>Flask-Pymongo Example App</h1>
         <nav>
           <a href="{{ url_for('show_home')}}">Home</a>
+          <a href="{{ url_for('show_friends_events')}}">Friends</a>
           <a href="{{ url_for('logout')}}">Log out</a>
         </nav>
       </header>
