Fixed user format and improved registration and login

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,8 +10,8 @@
                 <h1 class="card_title">Login to your account</h1>
                 <form class="card_form" action="/login" method="POST">
                     <div class="input">
-                        <input class="input_field" type="text" name="email" placeholder="Email..." required>
-                        <label class="input_label" for="email">Email</label>
+                        <input class="input_field" type="text" name="username_email" placeholder="Username or Email..." required>
+                        <label class="input_label" for="username_email">Username or Email</label>
                         <label class="input_label" class="error" for="email">{{error_message}}</label>
                     </div>
                     <div class="input">
