--- a/templates/home.html
+++ b/templates/home.html
@@ -4,23 +4,19 @@
 
     <h2>For You</h2>
     <section class="posts">
-        <ul>
         {% for post in posts %}
-            <li>
-                <div class ="card">
-                    {{post.title}} : {{post.labels}} : {{post.id}}
-                    <form action = "/home" method="POST">
-                        <input type="hidden" name="post_id" value="{{post.id}}" />
-                        {% if post.liked %}
-                            <button type="submit">unlike</button>
-                        {% else %}
-                            <button type="submit">like</button>
-                        {% endif %}
-                    </form>
-                </div>
-            </li>
+            <div class ="card">
+                <img src="static/img/placeholder.png" alt="placeholder">
+                <form action = "/home" method="POST">
+                    <input type="hidden" name="post_id" value="{{post.id}}" />
+                    {% if post.liked %}
+                        <button type="submit">unlike</button>
+                    {% else %}
+                        <button type="submit">like</button>
+                    {% endif %}
+                </form>
+            </div>
         {% endfor %}
-        </ul>
 
     </section>
 
