--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,79 +4,157 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-html, body {
-    margin: 0 auto;
-    width: 100vw;
+html {
+    margin: 0px;
+    max-width: 100%;
+    /* overflow: hidden; */
 }
 
-h2 {
-    text-align: center;
-    font-size: 10vw
-}
-
-.error {
-    color: red;
+body {
+    margin: 0;
 }
 
 header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     text-align: center;
     width: 100%;
-    height: 30vw;
-    padding: 0.5vw;
+    height: 12.5vh;
+    padding-left: 5vw;
+    padding-right: 5vw;
     margin:0;
-    line-height: 1.5;
-    background-color: black;
-    color: white;
-    font-size: 4.5vw;
+    box-shadow: 0 5vh 20 0 gray;
+    border-bottom: 3px solid #665856;
+    background-color: white;
 }
 
-html {
-    height: 100%;
+header input[type="search"] {
+    float: left;
+    font-size: 5vw;
+    height: 5vh;
+    width: 70vw;
+    border-radius: 3vw;
+    padding: 5vw;
+    margin-top: 5.5vw;
 }
 
-.login_register {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+header button[type="submit"] {
+    float: right;
+    font-size: 5vw;
+    height: 5vh;
+    width: 20vw;
+    border-radius: 3vw;
+    margin-top: 5vw;
 }
 
-.container {
-    
-    background-color: #fafafe;
-    border-radius: 10px;
-    margin: 5vw;
-    padding: 5vw 5vw 5vw;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+main {
+    text-align: center;
     width: 100%;
-    box-sizing: border-box;
+    height: 68.5vh;
+    padding: 5vw;
+    margin:0;
+    box-shadow: 0 5vh 20 0 gray;
+    border-top: 3px solid #665856;
+    background-color: white;
+    overflow-y: scroll;
 }
 
-.card a {
+footer {
+    font-size: 5vw;
+    text-align: center;
+    width: 100%;
+    height: 12.5vh;
+    padding: 5vw;
+    margin:0;
+    border-top: 3px solid #665856;
+    box-shadow: 0 -5vh 20 0 gray;
+    background-color: white;
+}
+
+h2 {
+    justify-content: center;
+    text-align: center;
+    font-size: 2vh;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    margin-bottom: 1vh;
+    border-bottom: 3px solid #837d7c;
+}
+
+.posts {
+    padding: 5vw;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(40vw, 1fr));
+    grid-gap: 5vw;
+}
+
+.posts {
+    justify-content: center;
+    text-align: center;
+}
+
+.card {
+    display: grid;
+    grid-template-rows: max-content 1fr;
+}
+
+.card img {
+    border: 5px solid black;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    
+}
+
+.card button {
+    font-size: 1.5vh;
+    padding: 1vw;
+    width: 50%
+}
+
+.navigation ul {
+    list-style-type: none;
+    overflow: hidden;
+    text-align: center;
+}
+
+.navigation li {
+    display: inline;
+}
+
+.navigation li a {
+    display: inline-block;
+}
+
+.navigation li p {
+    display: inline-block;
+    padding: 10px;
+}
+
+.navigation-styled li a {
+    color: black;
+    padding: 5vw;
+    text-decoration: none;
+}
+
+.form-card-div a {
     cursor: pointer;
-    color: #cc5c07;
+    color: #ff5050;
     text-decoration: none;
     -moz-transition: all 0.3s;
     -o-transition: all 0.3s;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
 }
-.card a:hover {
-    color: #ff5050;
-}
 
-.card {
+.form-card-div {
     z-index: 2;
 }
   
-.card_title {
+.form-title {
     font-size: 5vw;
     margin: 0;
 }
   
-.card_button {
+.form-button {
     margin-bottom: 10px;
     border-radius: 4px;
     border: none;
@@ -87,8 +165,8 @@ html {
     font-weight: 500;
     margin: 25px 0 10px;
     color: #fff;
-    background: linear-gradient(#ff6100, #ff5050);
-    box-shadow: 0 2px 12px -3px #ff5050;
+    background: linear-gradient(#5c5856, #36322f);
+    box-shadow: 0 2px 12px -3px #36322f;
     -moz-animation: btn 6s 3s infinite ease-in-out;
     -webkit-animation: btn 6s 3s infinite ease-in-out;
     animation: btn 6s 3s infinite ease-in-out;
@@ -98,12 +176,8 @@ html {
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
 }
-.card_button:hover {
-    opacity: 1;
-    box-shadow: 0 2px 2px -3px #ff5050;
-}
   
-.card_info {
+.form-info {
     text-align: center;
     font-size: 3vw;   
 }
@@ -139,14 +213,6 @@ html {
     border-bottom-color: #665856;
 }
 
-
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100vw;
-    height: 10vw;
-    font-size: 3vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.error {
+    color: red;
 }
