--- a/templates/login_register_base.html
+++ b/templates/login_register_base.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div>
-      <header>
+      <header id="login-register-header">
         <h1>Welcome to Treasure Trove</h1>
       </header>
       <main>{% block container %} {% endblock %}</main>
