--- a/templates/register.html
+++ b/templates/register.html
@@ -6,8 +6,8 @@
 
         <div class="container">
 
-            <div class="card">
-                <h1 class="card_title">Create a new account</h1>
+            <h2>Create New Account</h2>
+            <div class="form-card-div">
                 <form action="/register" method="POST" class="card_form">
                     <div class="error">{{error_message}}</div>
                     <div class="input">
@@ -26,9 +26,9 @@
                         <input class="input_field" type="password" name="confirm_password" placeholder="Confirm Password..." required>
                         <label class="input_label" for="confirm_password">Confirm Password</label>
                     </div>
-                    <button class="card_button" type="submit">Register</button>
+                    <button class="form-button" type="submit">Register</button>
                 </form>
-                <div class="card_info">
+                <div class="form-info">
                     <p>Already Have an account <a href = "{{ url_for('login') }}">Log in</a></p>
                 </div>
             </div>
