--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 3vw;
 }
 
 html {
@@ -26,6 +27,37 @@ header {
     background-color: white;
 }
 
+.title-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#profile-picture {
+    max-width: 20vw;
+    max-height: 20vw;
+    border-radius: 50%;
+    margin-bottom: 15px;
+}
+
+#delete-button {
+    width: 100%;
+    padding: 5px 10px; /* Adjust padding to make the button smaller */
+    background-color: #dc3545; /* Red color for a delete button, you can change it */
+    color: #fff; /* White text for better visibility, you can change it */
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#delete-button:hover {
+    background-color: #bd2130; /* Darker red color on hover, you can change it */
+}
+
+header h1 {
+    font-size: 7vw;
+}
+
 header input[type="search"] {
     float: left;
     font-size: 5vw;
@@ -37,6 +69,7 @@ header input[type="search"] {
 }
 
 header button[type="submit"] {
+    background-color: #837d7c;
     float: right;
     font-size: 5vw;
     height: 5vh;
@@ -130,6 +163,7 @@ h2 {
 }
 
 .navigation-styled li a {
+    font-size: 5vw;
     color: black;
     padding: 5vw;
     text-decoration: none;
@@ -155,6 +189,7 @@ h2 {
 }
   
 .form-button {
+    text-decoration: none;
     margin-bottom: 10px;
     border-radius: 4px;
     border: none;
