--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <section class="posts">
         {% for post in posts %}
             <div class ="card">
-                <img src="static/img/placeholder.png" alt="placeholder">
+                <img src="{{ url_for('static', filename='img/placeholder.png') }}" alt="placeholder">
                 <form action = "/home" method="POST">
                     <input type="hidden" name="post_id" value="{{post.id}}" />
                     {% if post.liked %}
