--- a/templates/profile.html
+++ b/templates/profile.html
@@ -216,7 +216,9 @@
      <a href="#" class="action-button">Add Friend</a>
         <a href="#" class="action-button">Send Message</a>
 
-        <button> Gift </button>
+        <form action="{{ url_for('announce_my_event') }}" method="get" id="announce_event_form">
+            <button type="submit" id="announce_event">Announce Event</button>
+        </form>
 
         <div id="user-sizes">
             <h3>Size Information</h3>
