--- a/templates/profile.html
+++ b/templates/profile.html
@@ -126,7 +126,7 @@
     </div>
 
     <form action="{{ url_for('announce_my_event') }}" method="get" id="announce_event_form">
-        <button type="submit" id="announce_event">Announce Event</button>
+        <button type="submit" class="form-button">Announce Event</button>
     </form>
 
     {% if editing %}
