--- a/templates/base_search.html
+++ b/templates/base_search.html
@@ -14,7 +14,7 @@
   <body>
     <div>
       <header>
-        <form id="search-form" action="/home" method="GET">
+        <form id="search-form" action={{search_action}} method="GET">
           <!-- query_type is to be replaced with posts/friends/etc. -->
           <input id="search" type ="search" name="query" placeholder="Search {{query_type}}..." autofocus>
           <!-- <button type="submit">Go</button> -->
