--- a/templates/announce_my_event.html
+++ b/templates/announce_my_event.html
@@ -8,31 +8,34 @@
             <div class="form-card-div">
                 <form class="form" action="{{ url_for('announce_my_event') }}" method="post">
                     <div class="input">
-                        <input class="input_field" type="text" name="eventname" required>
+                        <input class="input_field" type="text" name="eventname" placeholder="John's Birthday Party"required>
                         <label class="input_label" for="eventname">Event Name:</label>
                     </div>
 
                     <div class="input">
-                        <input class="input_field" type="text" name="time" required>
+                        <input class="input_field" type="text" name="time" placeholder="19:00" required>
                         <label class="input_label" for="time">Time:</label>
                     </div>
 
                     <div class="input">
-                        <input class="input_field" type="text" name="date" required>
+                        <input class="input_field" type="text" name="date" placeholder="MM/DD/YYYY" required>
                         <label class="input_label" for="date">Date:</label>
                     </div>
 
                     <div class="input">
-                    <input class="input_field" type="text" name="place" required>
+                    <input class="input_field" type="text" name="place" placeholder="Washington Square Park.." required>
                     <label class="input_label" for="place">Place:</label>
                     </div>
                 
+                    <div>
+                    <h2> Select friends you wish to invite: </h2>
                     {% for item in user.friends %}
                         <label class="input_label">
                             <input type="checkbox" name="friends_selected" value="{{ item }}">
                             {{ item }}
                         </label><br>
                     {% endfor %}
+                    </div>
 
                     <input type="submit" value="Create Event" class="form-button">
                 </form>
